[package]
name = "slintuitesttwoost"
version = "0.1.0"
authors = ["fallxnstr <fallxnstr@gmail.com>"]
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "1.4"
csv = "1.2.2"

[build-dependencies]
slint-build = "1.4"


[profile.dev]
opt-level = 3